--- a/docroot/themes/custom/big_noise/scss/style/_node--news-article.scss
+++ b/docroot/themes/custom/big_noise/scss/style/_node--news-article.scss
@@ -49,7 +49,7 @@
     }
 
     .image-caption-container {
-      font-weight: 100;
+      font-weight: 300;
     }
   }
 }
